fix: fix the align items in menu and the justify content in nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,15 +50,18 @@ a {
   height: 100px;
   position: relative;
   justify-content: space-around;
-  align-items: flex-end;
+  align-items: center;
   display: flex;
-  flex-flow: row nowrap;
+  margin-top: 30px;
 }
 
 .nav {
   display: flex;
   height: 60px;
+  width: 350px;
   align-items: center;
+  justify-content: space-between;
+  margin-left: 260px;
 }
 
 .nav span {
